Bug 1271657. Redo gfxConfig support for HW D3D11 ANGLE. r=dvander