gfx/thebes/gfxWindowsPlatform.cpp
@@ -373,6 +373,14 @@ gfxWindowsPlatform::~gfxWindowsPlatform()
   CoUninitialize();
 }
 
+static void
+UpdateANGLEConfig()
+{
+  if (!gfxConfig::IsEnabled(Feature::D3D11_COMPOSITING)) {
+    gfxConfig::Disable(Feature::D3D11_HW_ANGLE, FeatureStatus::Disabled, "D3D11 compositing is disabled");
+  }
+}
+
 void
 gfxWindowsPlatform::InitAcceleration()
 {
@@ -389,6 +397,7 @@ gfxWindowsPlatform::InitAcceleration()
 
   InitializeConfig();
   InitializeDevices();
+  UpdateANGLEConfig();
   UpdateRenderMode();
 }
 
@@ -460,6 +469,7 @@ gfxWindowsPlatform::HandleDeviceReset()
   gfxAlphaBoxBlur::ShutdownBlurCache();
 
   InitializeDevices();
+  UpdateANGLEConfig();
   BumpDeviceCounter();
   return true;
 }
@@ -1920,6 +1930,25 @@ IsWARPStable()
   return true;
 }
 
+static void
+InitializeANGLEConfig()
+{
+  FeatureState& d3d11ANGLE = gfxConfig::GetFeature(Feature::D3D11_HW_ANGLE);
+
+  if (!gfxConfig::IsEnabled(Feature::D3D11_COMPOSITING)) {
+    d3d11ANGLE.DisableByDefault(FeatureStatus::Unavailable, "D3D11 compositing is disabled");
+    return;
+  }
+
+  d3d11ANGLE.EnableByDefault();
+
+  nsCString message;
+  if (!IsGfxInfoStatusOkay(nsIGfxInfo::FEATURE_DIRECT3D_11_ANGLE, &message)) {
+    d3d11ANGLE.Disable(FeatureStatus::Blacklisted, message.get());
+  }
+
+}
+
 void
 gfxWindowsPlatform::InitializeConfig()
 {
@@ -1930,6 +1959,7 @@ gfxWindowsPlatform::InitializeConfig()
 
   InitializeD3D9Config();
   InitializeD3D11Config();
+  InitializeANGLEConfig();
   InitializeD2DConfig();
 }
 
@@ -2033,6 +2063,9 @@ gfxWindowsPlatform::UpdateDeviceInitData()
     FeatureStatus::Disabled,
     "Disabled by parent process");
 
+
+  InitializeANGLEConfig();
+
   return true;
 }
 
@@ -2097,13 +2130,13 @@ gfxWindowsPlatform::AttemptD3D11DeviceCreation(FeatureState& d3d11)
   mCompositorD3D11TextureSharingWorks = ::DoesD3D11TextureSharingWork(mD3D11Device);
 
   if (!mCompositorD3D11TextureSharingWorks) {
-    gfxConfig::SetFailed(Feature::D3D11_ANGLE,
+    gfxConfig::SetFailed(Feature::D3D11_HW_ANGLE,
                          FeatureStatus::Broken,
                          "Texture sharing doesn't work");
   }
 
   if (DoesRenderTargetViewNeedsRecreating(mD3D11Device)) {
-    gfxConfig::SetFailed(Feature::D3D11_ANGLE,
+    gfxConfig::SetFailed(Feature::D3D11_HW_ANGLE,
                          FeatureStatus::Broken,
                          "RenderTargetViews need recreating");
   }
@@ -2351,12 +2384,6 @@ gfxWindowsPlatform::InitializeDevices()
   // First, initialize D3D11. If this succeeds we attempt to use Direct2D.
   InitializeD3D11();
   InitializeD2D();
-
-  if (!gfxConfig::IsEnabled(Feature::D3D11_COMPOSITING)) {
-    gfxConfig::DisableByDefault(Feature::D3D11_ANGLE, FeatureStatus::Disabled, "D3D11 compositing is disabled");
-  } else {
-    gfxConfig::EnableByDefault(Feature::D3D11_ANGLE);
-  }
 
   if (!gfxConfig::IsEnabled(Feature::DIRECT2D)) {
     if (XRE_IsContentProcess() && GetParentDevicePrefs().useD2D1()) {
